[package]
name = "hello_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
# scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", tag= "v1.2.0" }
rust_avltree = { path = "../.." }



[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
